# RTA

./: .gitignore  CMakeLists.txt  README.md
Problem/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  TDL  Unbelievable  in  out  std-out
Solved/: A-染色.cpp  HDU 5303.cpp  HDU1285.cpp
Solved/Multi-University Training Contest/: 1001-Ascending Rating.cpp  1001-oval-and-rectangle.cpp  1002-Balanced Sequence.cpp  1002-Beautiful Now.cpp  1002-Beautiful NowB.cpp  1002-Harvest of Apples.cpp  1004-Distinct Values.cpp  1004-Distinct ValuesB.cpp  1004-Euler Function.cpp  1004-Nothing is Impossible.cpp  1005-Everything Has Changed.cpp  1005-GuGuFishtion.cpp  1005-Magic Square.cpp  1005-Matrix from Arrays.cpp  1007-Chiaki Sequence Revisited.cpp  1007-Naive Operations.cpp  1010-Let Sudoku Rotate.cpp  1010-Sequence.cpp  1011-Time Zone.cpp  1012-Visual Cube.cpp  A-GPA.cpp  A-Minimum Cost Perfect Matching.cpp  A-PACM Team.cpp  A-Run.cpp  A-Singing Contest.cpp  C-Bit Compression.cpp  D-Money.cpp  D-Two Graphs.cpp  D-Two GraphsB.cpp  E-Counting 4-Cliques.cpp  E-Room.cpp  E-Sort String.cpp  E-Sort StringB.cpp  E-Touring Cities.cpp  G-Counting regions.cpp  G-Max.cpp  H-Diff-prime Pairs.cpp  I-Car.cpp  J-Different Integers.cpp  J-Farm.cpp  (+4 more)
Solved/模版/二分大法/: Binary_Search.cpp
Solved/模版/动态规划/: 01背包.cpp  最大上升子序列.cpp  最大连续子序列.cpp
Solved/模版/数据结构/: BFS.cpp  Hash.cpp  KM.cpp  MergeSort.cpp  二维树状数组.cpp  匈牙利.cpp  并查集.cpp  拓扑排序.cpp  树状数组.cpp  求逆序对.cpp  素数环.cpp  迷宫问题.cpp
Solved/模版/数论/: IsPrimer.cpp  Miller_rabin算法.cpp  Mobius.cpp  Pollard_Rho 算法.cpp  欧拉函数筛.cpp  约数筛.cpp  线性筛.cpp  逆元.cpp
