cmake_minimum_required(VERSION 3.9)
project(competitaon)

set(CMAKE_CXX_STANDARD 11)

add_executable(ProblemA Problem/A.cpp)

add_executable(ProblemB Problem/B.cpp)

add_executable(ProblemC Problem/C.cpp)

add_executable(ProblemD Problem/D.cpp)

add_executable(ProblemE Problem/E.cpp)

add_executable(ProblemF Problem/F.cpp)

add_executable(ProblemG Problem/G.cpp)